Fixes attractor null target bug, makes symbols visible in diagram

--- a/static/assets/css/game.v0.2.styles.css
+++ b/static/assets/css/game.v0.2.styles.css
@@ -118,6 +118,17 @@ game-canvas game-dna-node {
     cursor: pointer;
 }
 
+game-canvas game-dna-node span {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    user-select: none;
+    pointer-events: none;
+    color: #fff;
+}
+
 game-canvas game-dna-node.root {
     background-color: #fff;
     border: 4px solid #000;
